--- a/style.1.css
+++ b/style.1.css
@@ -19,6 +19,16 @@ body
     top: 50%;
 }
 
+.login
+{
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+}
+
 .container .circle1, .circle2
 {
     height: 200px;
@@ -31,21 +41,21 @@ body
 {
     background: linear-gradient(blue, #bf23f6);
     left: -80px;
-    top: -40px;
+    top: -80px;
 }
 
 .circle2
 {
     background: linear-gradient(to right,#fd9307, yellow);
-    right: -30px;
-    bottom: -50px;
+    right: -50px;
+    bottom: -80px;
     
 }
 
 form
 {
     width: 430px;
-    height: 520px;
+    height: 600px;
     background-color: rgba(255,255,255,0.07);
     position: absolute;
     transform: translate(-50%, -50%);
