--- a/Contact.css
+++ b/Contact.css
@@ -161,3 +161,17 @@ form h5:hover
 {
     color: black;
 }
+.popup
+{
+    width: 400px;
+    height: 400px;
+    background: #fff;
+    border-radius: 6px;
+    padding: absolute;
+    top: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+}
