--- a/Background.css
+++ b/Background.css
@@ -9,3 +9,69 @@ body
 {
     background: linear-gradient(#d5c7da, white);
 }
+.button {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+  }
+  
+.button1
+  {
+      border-radius: 8px;
+      width: 16%;
+      height: 50px;
+  
+  }
+.button2
+  {
+      border-radius: 8px;
+      width: 16%;
+      height: 50px;
+  
+  }
+.button3
+  {
+      border-radius: 8px;
+      width: 18%;
+      height: 50px;
+  
+  }
+.button4
+  {
+      border-radius: 8px;
+      width: 16%;
+      height: 50px;
+  
+  }
+.button5
+  {
+      border-radius: 8px;
+      width: 16%;
+      height: 50px;
+  
+  }
+.button:hover
+{
+    background: linear-gradient(to right,#124052, rgb(87, 179, 255));
+    color: #04AA6D;
+}
+
+.parallax {
+    /* The image used */
+    background-image:url(/Images/unnamed.png) ;
+  
+    /* Set a specific height       <div class="parallax"></div>*/
+    min-height: 500px; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
