--- a/Contact.css
+++ b/Contact.css
@@ -157,7 +157,13 @@ button:hover
     color: white;
 }
 
-form h5:hover
+.form h5:hover
 {
     color: black;
+}
+
+.home button
+{
+    background-color: #080710;
+    top: 0px;
 }
