--- a/stl1.css
+++ b/stl1.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+header
+{
+  margin-block-end: 20px
+}
+
 .home-categories {
     text-align: center;
     margin: 20px;
@@ -18,6 +23,30 @@
 .contain img {
   height: 300px;
   width: 1000px;
+}
+
+
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
 
 .home-categories a {
@@ -39,7 +68,7 @@ body {
   
   .navbar {
     overflow: hidden;
-    background-color: rgb(255, 255, 255);
+    background-color: #222;
   }
   
   .navbar a {
@@ -60,7 +89,7 @@ body {
     font-size: 16px;  
     border: none;
     outline: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
@@ -69,7 +98,6 @@ body {
   
   .navbar a:hover, .dropdown:hover .dropbtn {
     border-radius: 10px;
-    background: linear-gradient(to left,#fd9307, yellow);
   }
   
   .dropdown-content {
