--- a/Background.css
+++ b/Background.css
@@ -20,9 +20,8 @@
   
   header
   {
-    background-color: #222;
-    box-shadow: 0 2px 5px;
-    margin-right: 1px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0.2px 2px;
   }
 
 .button1
