--- a/stl.css
+++ b/stl.css
@@ -114,6 +114,10 @@ body {
     font-family: inherit;
     margin: 0;
   }
+  .dropdown button img{
+    margin-right: 10px;
+    margin-top: 1px;
+  }
   
   .navbar .dropdown .dropbtn
   {
@@ -133,6 +137,7 @@ body {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    transition: 2s;
   }
   
   .dropdown-content a {
@@ -142,6 +147,7 @@ body {
     text-decoration: none;
     display: block;
     text-align: left;
+    transition: 0.2s;
   }
   
   .dropdown-content a:hover {
@@ -150,7 +156,7 @@ body {
   
   .dropdown:hover .dropdown-content {
     display: block;
-    border-radius: 2px;
+    border-radius: 10px;
   }
 
   .category-name, .page-meta a, .page-title {
@@ -344,7 +350,6 @@ button:hover {
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
@@ -360,6 +365,8 @@ button:hover {
   /* Position the tooltip text - see examples below! */
   position: absolute;
   z-index: 1;
+  margin-left: 10px;
+  margin-top: -12px;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
