--- a/Background.css
+++ b/Background.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 
 .button {
     background-color: #04AA6D;
